packages/test_track/lib/src/errors/default_to_cache_exception.dart
import 'package:test_track/src/errors/test_track_exception.dart';

class UnableToFetchAppVisitorConfigDefaultingToCacheException implements TestTrackException {
  final String? message;

  UnableToFetchAppVisitorConfigDefaultingToCacheException({this.message});
}
